fix spacing on note sections

--- a/app/components/Help/Help.module.css
+++ b/app/components/Help/Help.module.css
@@ -3,7 +3,9 @@
     font-size: 16px;
     background-color: gray;
     padding: 10px;
-    margin: 20px;
+    margin-top: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
     display: inline-block;
 }
 
